# markhu

./: README-ZH.md  README.md  index.html  package.json  version.sh
.github/workflows/: release.yml
public/: iconfont.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  locale.json  main.rs  menu.rs  search.rs
src/api/: file.ts  menu.ts  model.ts  path.ts  utils.ts
src/assets/: vditor-toolbar-svg.ts
src/components/: Content.vue  Dialogs.vue  Editor.vue  Navigator.vue
src/components/dialogs/: CreateDirDialog.vue  CreateFileDialog.vue  HistoryFileDialog.vue  MoveDialog.vue  RenameDialog.vue  SaveAllDialog.vue  SaveAsDialog.vue  SaveConfirmDialog.vue
src/components/filetree/: FileTree.vue  FileTreeNode.vue  types.ts  useDragDrop.ts  useEdit.ts  useSelect.ts  utils.ts
src/components/panels/: ResourcePanel.vue  SplitterPanel.vue
src/components/views/: OpenFiles.vue  Outline.vue  Resource.vue  Search.vue  Structure.vue
src/locales/: en.json  en_US.json  index.ts  zh_CN.json  zh_cn.json
src/router/: index.ts
src/stores/: index.ts
src/stores/modules/: dialog.ts  editor.ts  outline.ts  structure.ts  system.ts
src/themes/: dark.css  light.css
