[package]
name = "markhu"
version = "0.2.2"
description = "A Tauri App"
authors = ["zitier"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-window-state = "2.0.0-alpha"
tauri-plugin-dialog = "2.0.0-alpha"

trash = "3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = { git = "https://github.com/zitiger/rfd/" }

[target.'cfg(target_os = "linux")'.dependencies]
fork = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
